--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "react-scripts": "3.0.1"
+    "@testing-library/react": "^8.0.1",
+    "jest-dom": "^3.5.0",
+    "react-scripts": "3.0.1",
+    "react-test-renderer": "^16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
